--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
 
     <div class="footer">
-        <p class="footer-text">Bikcraft 2022</p>
+        <p class="footer-text">Bikcraft 2022 - Por Ian Melo</p>
     </div>
 
 
